# aire

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
aire/: build.gradle.kts
aire-filters/: Cargo.toml  README.md  build.sh  rust-toolchain.toml
aire-filters/include/: aire_filters.h
aire-filters/src/: android_bitmap.rs  android_rgba.rs  bitmap_helper.rs  blur.rs  clahe.rs  equalize_hist.rs  gamma_curves.rs  histogram.rs  hists.rs  hsl.rs  hsv.rs  lab.rs  lib.rs  luv.rs  morph.rs  palette.rs  scalar.rs  surface_type.rs  tonemap.rs  transfer_resolve.rs  xyz.rs
aire/src/androidTest/java/com/awxkee/aire/: ExampleInstrumentedTest.kt
aire/src/main/cpp/: CMakeLists.txt  aire.cpp
aire/src/main/cpp/aireli/: AireJpegli.cpp  AireJpegli.h  CMakeLists.txt  JPEGEncoder.cpp  JPEGEncoder.h
aire/src/main/cpp/algo/: BezierInterpolator.hpp  CoverTree.h  CoverTreePoint.h  EigenUtils.h  KDColorTree.hpp  MathUtils.hpp  MedianCut.cpp  MedianCut.h  NearestColorSearch.hpp  PerlinNoise.hpp  WuQuantizer.cpp  WuQuantizer.h  bytell_hash_map.hpp  common.h  concurrency.hpp  fast_math-inl.h  flat_hash_map.hpp  math-inl.h  rational_polynomial-inl.h  sleef-hwy.h  support-inl.h
aire/src/main/cpp/algo/median/: QuickSelect.cpp  QuickSelect.h  Wirth.cpp  Wirth.h
aire/src/main/cpp/base/: AffineTransform.cpp  AffineTransform.h  ArbitraryUtil.cpp  ArbitraryUtil.h  Arithmetics.cpp  Arithmetics.h  Channels.cpp  Channels.h  Convolve1D.cpp  Convolve1D.h  Convolve1Db16.cpp  Convolve1Db16.h  Convolve2D.cpp  Convolve2D.h  Convolve2D3x3.cpp  Convolve2D3x3.h  Dilation.cpp  Dilation.h  Erosion.cpp  Erosion.h  FF1DWorkspace.hpp  FF2DWorkspace.h  FF2DWorkspace.hpp  FftUtils.h  Grain.cpp  Grain.h  Grayscale.cpp  Grayscale.h  JPEGEncoder.cpp  JPEGEncoder.h  LUT8.cpp  LUT8.h  OctTree.h  PNGEncoder.cpp  PNGEncoder.h  RemapPalette.cpp  RemapPalette.h  Sharpness.cpp  Sharpness.h  Threshold.cpp  (+6 more)
aire/src/main/cpp/blur/: AnisotropicDiffusion.cpp  AnisotropicDiffusion.h  BilateralBlur.cpp  BilateralBlur.h  BoxBlur.cpp  BoxBlur.h  FastBilateral.cpp  FastBilateral.h  GaussBlur.cpp  GaussBlur.h  MedianBlur.cpp  MedianBlur.h  PoissonBlur.cpp  PoissonBlur.h  ShgStackBlur.cpp  ShgStackBlur.h  TentBlur.cpp  TentBlur.h  ZoomBlur.hpp
aire/src/main/cpp/color/: Adjustments.cpp  Adjustments.h  Blend.h  ConvolveToneMapper.cpp  ConvolveToneMapper.h  Gamut.cpp  Gamut.h  eotf-inl.h
aire/src/main/cpp/color/tone/: AcesFilmicToneMapper.hpp  AcesHillToneMapper.hpp  AldridgeToneMapper.hpp  DragoToneMapper.hpp  ExposureToneMapper.hpp  HableFilmicToneMapper.hpp  HejlBurgessToneMapper.hpp  LogarithmicToneMapper.hpp  MobiusToneMapper.hpp  MonochromeToneMapper.hpp  ToneMapper.h  UchimuraToneMapper.hpp
aire/src/main/cpp/conversion/: CopyUnaligned.cpp  CopyUnaligned.h  F32ToRGB1010102.cpp  F32ToRGB1010102.h  HalfFloats.cpp  HalfFloats.h  RGBAlpha.cpp  RGBAlpha.h  Rgb1010102.cpp  Rgb1010102.h  Rgb1010102toF16.cpp  Rgb1010102toF16.h  Rgb565.cpp  Rgb565.h  Rgba1010102toF32.cpp  Rgba1010102toF32.h  Rgba16bitCopy.cpp  Rgba16bitCopy.h  Rgba2Rgb.cpp  Rgba2Rgb.h  Rgba8ToF16.cpp  Rgba8ToF16.h  RgbaF16bitNBitU8.cpp  RgbaF16bitNBitU8.h  attenuate-inl.h
aire/src/main/cpp/conversion/yuv/: NV12-inl.h  NV21-inl.h  YUV420-inl.h  YUV422-inl.h  YUV444-inl.h  YuvConverter.cpp  YuvConverter.h  yuv-inl.h
aire/src/main/cpp/effect/: ConvexEffect.hpp  CrystallizeEffect.cpp  CrystallizeEffect.h  FractalGlassEffect.cpp  FractalGlassEffect.h  MarbleEffect.cpp  MarbleEffect.h  OilEffect.cpp  OilEffect.h  PerlinDistortion.cpp  PerlinDistortion.h  WaterEffect.cpp  WaterEffect.h
aire/src/main/cpp/halftone/: Halftone.cpp  Halftone.h
aire/src/main/cpp/hwy/ops/: generic_ops-inl.h
aire/src/main/cpp/jni/: AcquireBitmapPixels.cpp  AcquireBitmapPixels.h  Base.cpp  BlurPipes.cpp  Compress.cpp  EffectsPipelines.cpp  Geometry.cpp  JNIUtils.h  Pipelines.cpp  ScalePipelines.cpp  ShiftPipelines.cpp  ToneMappingPipelines.cpp  YuvPipelines.cpp
aire/src/main/cpp/jni/base/: Base.cpp
aire/src/main/cpp/jni/blur/: BlurPipes.cpp
aire/src/main/cpp/jni/pipelines/: Pipelines.cpp
aire/src/main/cpp/jni/shift/: ShiftPipelines.cpp
aire/src/main/cpp/pipelines/: DehazeDarkChannel.cpp  DehazeDarkChannel.h  GuidedFilter.cpp  GuidedFilter.h  MobileDehaze.cpp  MobileDehaze.h  RemoveShadows.cpp  RemoveShadows.h
aire/src/main/cpp/scale/: BilinearRowSampler.cpp  BilinearRowSampler.hpp  HannRowSampler.hpp  NearestRowSampler.hpp  ScaleRowSampler.hpp  ScaleSampler.hpp  WeightedRowSampler.hpp  WeightedWindow4RowSampler.hpp  WeightedWindow6RowSampler.hpp  XScaler.cpp  XScaler.h  aire_filters.h  sampler-inl.h  sampler.h
aire/src/main/cpp/shift/: Glitch.cpp  Glitch.h  TiltShift.cpp  TiltShift.h  WindStagger.cpp  WindStagger.h
aire/src/main/java/com/awxkee/aire/: Aire.kt  AireColorMapper.kt  AirePaletteDithering.kt  AireQuantize.kt  BasePipelines.kt  BitmapScaleMode.kt  BlurPipelines.kt  ColorMatrices.kt  ConvolveKernels.kt  EdgeMode.kt  EffectsPipelines.kt  GaussianPreciseLevel.kt  KernelShape.kt  MedianSelector.kt  MorphKernels.kt  MorphOp.kt  MorphOpMode.kt  PaletteTransferColorspace.kt  ProcessingPipelines.kt  ResizeFunction.kt  Scalar.kt  ScaleColorSpace.kt  ScalePipelines.kt  ShiftPipelines.kt  TonePipelines.kt  TransferFunction.kt  Utils.kt  YuvPipelines.kt
aire/src/main/java/com/awxkee/aire/pipeline/: BasePipelinesImpl.kt  BlurPipelinesImpl.kt  EffectsPipelineImpl.kt  ProcessingPipelinesImpl.kt  ScalePipelinesImpl.kt  ShiftPipelineImpl.kt  TonePipelinesImpl.kt  YuvPipelinesImpl.kt
aire/src/test/java/com/awxkee/aire/: ExampleUnitTest.kt
app/: build.gradle.kts
app/src/androidTest/java/com/awxkee/aire/desktop/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/awxkee/aire/desktop/: MainActivity.kt
app/src/main/java/com/awxkee/aire/desktop/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/awxkee/aire/desktop/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
