[package]
name = "aire-filters"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.21.1"
ndk-sys = { version = "0.6.0", features = ["bitmap"] }
ndk = "0.9.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
colorutils-rs = "0.7.1"
fast_morphology = "0.2.0"
half = { version = "2.4.1", default-features = true, features = ["std", "alloc", "num-traits"] }
histogram_equalization = "0.2.1"
libblur = {version = "0.14.3", features = ["fft"]}
num-traits = "0.2.19"
palette-transfer = "0.2.0"
pic-scale = "0.3.2"

[profile.release]
lto = true
codegen-units = 2